//plugins {
//    id 'nebula.netflixoss' version '2.2.10'
//    id 'nebula.provided-base' version '2.0.1'
//}

plugins {
    id 'com.netflix.nebula.netflixoss' version '11.1.1'
}
// Establish version and status
ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name

subprojects {

    apply plugin: 'com.netflix.nebula.netflixoss'
//    apply plugin: 'netflix.nebula'
//    apply plugin: 'nebula.release'

//    apply plugin: 'nebula.netflixoss'
//    apply plugin: 'nebula.provided-base'
    apply plugin: 'java'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenCentral()
    }
    dependencies {
        implementation 'com.google.code.findbugs:jsr305:3.0.1'
        testImplementation('log4j:log4j:1.2.16')
    }
    group = "com.netflix.${githubProjectName}"

    tasks.withType(Test) { forkEvery = 1 }
    test {
        jvmArgs += [ "-XX:MaxPermSize=512m" ] // for archaius-scala
        maxHeapSize = '2g' // or however much memory the tests need
        testLogging {
            events 'started', 'failed', 'passed', 'skipped'
            showStandardStreams  = true
        }

    }
}

project(':archaius-core') {
    dependencies {
        implementation 'commons-configuration:commons-configuration:1.8'
        implementation 'org.slf4j:slf4j-api:1.6.4'
        implementation 'com.google.guava:guava:16.0'
        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
        implementation 'com.fasterxml.jackson.core:jackson-core:2.4.3'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
        testImplementation 'junit:junit:4.11'
        testImplementation 'org.slf4j:slf4j-simple:1.7.5'
        testImplementation 'org.apache.derby:derby:10.8.2.2'
        testImplementation 'org.apache.commons:commons-io:1.3.2'
        testImplementation 'org.mockito:mockito-all:1.9.5'
        testImplementation files('src/test/resources/classpathTestResources.jar')

    }
}

project(':archaius-aws') {
    dependencies {
        implementation project(':archaius-core')
        implementation 'com.amazonaws:aws-java-sdk-core:1.9.3'
        implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.9.3'
        implementation 'com.amazonaws:aws-java-sdk-s3:1.9.3'
        implementation 'commons-configuration:commons-configuration:1.8'
        implementation 'org.slf4j:slf4j-api:1.6.4'
        testImplementation 'junit:junit:4.11'
        testImplementation 'org.mockito:mockito-all:1.9.5'
        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
    }
}

//project(':archaius-jclouds') {
//    dependencies {
//        implementation project(':archaius-core')
//        implementation 'org.jclouds:jclouds-blobstore:1.6.0'
//        testImplementation 'junit:junit:4.11'
//        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
//    }
//}

project(':archaius-typesafe') {
    dependencies {
        implementation project(':archaius-core')
        implementation 'com.typesafe:config:1.2.1'
        implementation 'commons-configuration:commons-configuration:1.8'
        testImplementation 'junit:junit:4.11'
        implementation 'org.slf4j:slf4j-api:1.6.4'
        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
    }
}

project(':archaius-zookeeper') {
    dependencies {
        implementation project(':archaius-core')
        implementation('org.apache.zookeeper:zookeeper:3.4.5') {
            exclude group: 'com.sun.jdmk', module: 'jmxtools'
            exclude group: 'com.sun.jmx', module: 'jmxri'
            exclude group: 'javax.jms', module: 'jms'
        }
        implementation 'commons-configuration:commons-configuration:1.8'
        implementation 'org.apache.curator:curator-client:2.3.0'
        implementation 'org.apache.curator:curator-recipes:2.3.0'
        testImplementation 'junit:junit:4.11'
        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
        testImplementation 'org.apache.curator:curator-test:2.3.0'
    }
}

project(':archaius-etcd') {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    dependencies {
        implementation project(':archaius-core')
        implementation 'com.google.guava:guava:19.0'
        implementation 'commons-configuration:commons-configuration:1.8'
        implementation 'io.fastjson:etcd-client:0.33'
        testImplementation 'junit:junit:4.11'
        testImplementation 'org.mockito:mockito-all:1.9.5'
        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
    }
}

//project(':archaius-scala') {
//    apply plugin: 'scala'
//
//    dependencies {
//        implementation project(':archaius-core')
//        implementation 'org.scala-lang:scala-library:2.12.17'
//        testImplementation 'org.scalatest:scalatest_2.12'
//        testImplementation 'junit:junit:4.11'
//    }
//}

//project(':archaius-samplelibrary') {
//    apply plugin: 'scala'
//
//    dependencies {
//        implementation project(':archaius-scala')
//
//        implementation 'org.slf4j:slf4j-api:1.6.4'
//        implementation 'org.scala-lang:scala-library:2.12.17'
//
//        testImplementation 'org.scalatest:scalatest_2.12'
//        testImplementation 'junit:junit:4.11'
//    }
//    jar {
//        from('src/main/java') {
//            include 'META-INF/conf/springbeans.xml'
//            include 'META-INF/conf/config.properties'
//        }
//    }
//}
